@@ -10,6 +10,9 @@ mutter (3.4.1-3) UNRELEASED; urgency=low
   [ Michael Biebl ]
   * Bump Suggests: gnome-control-center to (>= 1:3.4.0) as we want a recent
     enough version which can handle keybindings based on GSettings.
+  * Use strict dependency between mutter/libmutter0 and mutter-common to
+    ensure we have the correct version of mutter-common providing the
+    org.gnome.mutter gsettings schema.
 
  -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 29 May 2012 17:02:41 +0200
 
